--- a/SDL_Project/SDL_Project.vcxproj
+++ b/SDL_Project/SDL_Project.vcxproj
@@ -138,15 +138,19 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\engine\Engine.cpp" />
-    <ClCompile Include="src\engine\utils\AssetLoader.cpp" />
+    <ClCompile Include="src\engine\entity\Entity.cpp" />
+    <ClCompile Include="src\engine\entity\player\Player.cpp" />
+    <ClCompile Include="src\engine\graphics\Scene\Texture.cpp" />
     <ClCompile Include="src\engine\graphics\Window.cpp" />
+    <ClCompile Include="src\engine\utils\InputHandler.cpp" />
     <ClCompile Include="src\Main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\engine\Engine.hpp" />
-    <ClInclude Include="src\engine\utils\AssetLoader.hpp" />
+    <ClInclude Include="src\engine\entity\Entity.hpp" />
+    <ClInclude Include="src\engine\entity\player\Player.hpp" />
+    <ClInclude Include="src\engine\graphics\Scene\Texture.hpp" />
     <ClInclude Include="src\engine\graphics\Window.hpp" />
-    <ClInclude Include="src\engine\utils\Utils.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
